--- a/index.html
+++ b/index.html
@@ -10,32 +10,25 @@
 <body>
     <div class="container">
         <div class="row">
-          <div class="form ">
             <form>
-              <div class="col-md-4">
-                <label for="inputFirstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="inputFirstName">
-              </div>
-              <div class="col-md-4">
-                <label for="inputLastName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="inputLastName">
-              </div>
-              <div class="col-md-4">
-                <label for="inputEmail" class="form-label">Email</label>
-                <input type="email" class="form-control" id="inputEmail">
-              </div>
-              <div class="col-md-4">
-                <label for="inputPassword" class="form-label">Password</label>
-                <input type="password" class="form-control" id="inputPassword">
-              </div>
-              <div class="col-12 pt-3">
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Email address</label>
+                  <input type="email" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-              </div>
-            </form>
-            
-          </div>
+              </form>
         </div>
     </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
