--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputLastName" class="form-label">Last Name</label>
-                  <input type="password" class="form-control" id="exampleInputLastName">
+                  <input type="text" class="form-control" id="exampleInputLastName">
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
