--- a/index.html
+++ b/index.html
@@ -14,20 +14,22 @@
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputFirstName" class="form-label">First Name</label>
                   <input type="text" class="form-control" id="exampleInputFirstName" aria-describedby="firstNameHelp">
-                  <!-- <div id="firstNameHelp" class="form-text"></div> -->
+                  <div id="firstNameHelp" class="form-text" style="color: red"></div>
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputLastName" class="form-label">Last Name</label>
                   <input type="text" class="form-control" id="exampleInputLastName">
+                  <div id="lastNameHelp" class="form-text" style="color: red"></div>
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
                   <input type="email" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp">
-                  <!-- <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div> -->
+                  <div id="emailHelp" class="form-text" style="color: red"></div>
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputPassword1" class="form-label">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1">
+                  <div id="passwordHelp" class="form-text" style="color: red"></div>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
               </form>
