--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="mb-3 col-md-4">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="text" class="form-control email" id="exampleInputEmail1" aria-describedby="emailHelp">
                   <div id="emailHelp" class="form-text" style="color: red"></div>
                 </div>
                 <div class="mb-3 col-md-4">
